# delta-rs

./: Cargo.toml
crates/core/src/delta_datafusion/: mod.rs
crates/core/src/kernel/: scalars.rs
crates/core/src/kernel/models/: fields.rs
crates/core/src/kernel/snapshot/: log_data.rs  log_segment.rs  mod.rs  replay.rs
crates/core/src/kernel/transaction/: mod.rs
crates/core/src/operations/: optimize.rs
crates/core/src/operations/cast/: mod.rs
crates/core/src/operations/write/: writer.rs
crates/core/src/table/: builder.rs  state.rs
crates/core/src/test_utils/factories/: data.rs
crates/core/src/writer/: mod.rs  stats.rs
crates/core/tests/: integration_datafusion.rs
