[workspace]
members = ["crates/*", "delta-inspect"]
exclude = ["proofs"]
resolver = "2"

[workspace.package]
authors = ["Qingping Hou <dave2008713@gmail.com>"]
rust-version = "1.82"
keywords = ["deltalake", "delta", "datalake"]
readme = "README.md"
edition = "2021"
description = "Native Delta Lake implementation in Rust"
homepage = "https://github.com/delta-io/delta.rs"
license = "Apache-2.0"
documentation = "https://docs.rs/deltalake"
repository = "https://github.com/delta-io/delta.rs"

[profile.release-with-debug]
inherits = "release"
debug = true

# Reducing the debuginfo for the test profile in order to trim the disk and RAM
# usage during development
# <https://github.com/delta-io/delta-rs/issues/1550?
[profile.test]
debug = "line-tables-only"

[workspace.dependencies]
delta_kernel = { git = "https://github.com/polarsignals/delta-kernel-rs", rev = "e62ae61", features = ["arrow", "internal-api", "default-engine-rustls"] }

# arrow
arrow = { git = "https://github.com/polarsignals/arrow-rs", rev = "4c1da06" }
arrow-arith = { git = "https://github.com/polarsignals/arrow-rs", rev = "4c1da06" }
arrow-array = { git = "https://github.com/polarsignals/arrow-rs", rev = "4c1da06", features = ["chrono-tz"] }
arrow-buffer = { git = "https://github.com/polarsignals/arrow-rs", rev = "4c1da06" }
arrow-cast = { git = "https://github.com/polarsignals/arrow-rs", rev = "4c1da06" }
arrow-ipc = { git = "https://github.com/polarsignals/arrow-rs", rev = "4c1da06" }
arrow-json = { git = "https://github.com/polarsignals/arrow-rs", rev = "4c1da06" }
arrow-ord = { git = "https://github.com/polarsignals/arrow-rs", rev = "4c1da06" }
arrow-row = { git = "https://github.com/polarsignals/arrow-rs", rev = "4c1da06" }
arrow-schema = { git = "https://github.com/polarsignals/arrow-rs", rev = "4c1da06" }
arrow-select = { git = "https://github.com/polarsignals/arrow-rs", rev = "4c1da06" }
object_store = { version = "0.12.0" }
parquet = { git = "https://github.com/polarsignals/arrow-rs", rev = "4c1da06" }

# datafusion
datafusion = { git = "https://github.com/polarsignals/datafusion", branch = "47.0.0" }
datafusion-expr = { git = "https://github.com/polarsignals/datafusion", branch = "47.0.0" }
datafusion-common = { git = "https://github.com/polarsignals/datafusion", branch = "47.0.0" }
datafusion-ffi = { git = "https://github.com/polarsignals/datafusion", branch = "47.0.0" }
datafusion-functions = { git = "https://github.com/polarsignals/datafusion", branch = "47.0.0" }
datafusion-functions-aggregate = { git = "https://github.com/polarsignals/datafusion", branch = "47.0.0" }
datafusion-physical-expr = { git = "https://github.com/polarsignals/datafusion", branch = "47.0.0" }
datafusion-physical-plan = { git = "https://github.com/polarsignals/datafusion", branch = "47.0.0" }
datafusion-proto = { git = "https://github.com/polarsignals/datafusion", branch = "47.0.0" }
datafusion-sql = { git = "https://github.com/polarsignals/datafusion", branch = "47.0.0" }

# serde
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27" }

# "stdlib"
bytes = { version = "1" }
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
regex = { version = "1" }
thiserror = { version = "2" }
url = { version = "2" }
urlencoding = "2.1.3"
uuid = { version = "1" }

# runtime / async
async-trait = { version = "0.1" }
futures = { version = "0.3" }
tokio = { version = "1" }
num_cpus = { version = "1" }
